start css and hacking stuff

--- a/packages/client/src/styles/inventory/inventoryStyle.css
+++ b/packages/client/src/styles/inventory/inventoryStyle.css
@@ -16,7 +16,7 @@ input {
     margin-left: 4px;
     margin-right: 4px;
 }
-.wallet {
+.inventory {
     width: 40%;
     height: 100px;
     overflow-y: auto;
@@ -32,13 +32,13 @@ input {
     width: 11px; /* Includes the "border" */
 }
 ::-webkit-scrollbar-track {
-  background: black; /* Dark grey track */
-  border-left: 2px solid yellow; /* Simulates left border */
-  border-right: 1px solid yellow; /* Simulates right border */
+    background: black; /* Dark grey track */
+    border-left: 2px solid yellow; /* Simulates left border */
+    border-right: 1px solid yellow; /* Simulates right border */
 }
 ::-webkit-scrollbar-thumb {
-  background: yellow; /* Yellow thumb */
-  border-radius: 2px; /* Makes the thumb rectangular but slightly rounded */
+    background: yellow; /* Yellow thumb */
+    border-radius: 2px; /* Makes the thumb rectangular but slightly rounded */
 }
 .output {
     width: 80%;
