--- a/packages/client/src/styles/defaultStyle.css
+++ b/packages/client/src/styles/defaultStyle.css
@@ -4,6 +4,11 @@ body {
     background-color: black;
     color: white;
 }
+#gameview {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
 ::-webkit-scrollbar {
     width: 8px; /* Includes the "border" */
 }
